--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <div class="skills__container bd-grid">          
                     <div>
                         <h2 class="skills__subtitle">Profesional Skills</h2>
-                        <p class="skills__text">Belum ada yang profesional presentase dibawah hanyalah angka kosong.</p>
+                        <p class="skills__text">Gak ada. Dibawah presentase palsu.</p>
                         <div class="skills__data">
                             <div class="skills__names">
                                 <i class='bx bxl-html5 skills__icon'></i>
