--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="home__data">
                     <h1 class="home__title">Hai,<br>Saya <span class="home__title-color">Alif</span><br>Computer Engineer</h1>
 
-                    <a href="mailto:alifkrisnada023@gmail.com" class="button">Contact</a>
+                    <a href="mailto:alifkrisnanda023@gmail.com" class="button">Contact</a>
                 </div>
 
                 <div class="home__social">
